--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/mytgei3586/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg"><p align="center">【新闻大家谈】舞弊八大证据和服务器疑云</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12552112.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/0Y1A6747-320x200.jpg"><p align="center">【独家】在海外为中共牵线的关键人物</p></a>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12552112.md#1" title="【独家】在海外为中共牵线的关键人物""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/0Y1A6747-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564010.md#1" title="乔治亚重计票不比对签名 川普团队拒承认结果""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229674346-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1" title="【新闻大家谈】舞弊八大证据和服务器疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/5/n12527927.md#1" title="【敦煌寻梦】丝绸之路上的明珠""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/F-11-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563284.md#1" title="【大选更新11·20】“舞弊是策划好的阴谋”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/11-53-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562667.md#1" title="田云：川普3律师重磅发言 直击舞弊和假新闻""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229684615-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563545.md#1" title="民营企业家李怀庆遭重判20年 舆论反弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Em9HLHVWEAASp5e-320x200.jpg">&nbsp;</a>
@@ -9,16 +12,13 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562470.md#1" title="共和党赢26摇摆区 拿下民主党7个众议席""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/06/610f3273b196930084f3ed7f98e4c629-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562260.md#1" title="鲍威尔：我们即将证明川普获压倒性胜利""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561962.md#1" title="沈舟：中共挑衅却引来新一轮军事反制""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/201104-F-QH368-1246-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562150.md#1" title="【重磅】川普律师公布八大选举舞弊指控""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7VF-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561412.md#1" title="【一线采访】青岛滨海学院封校 学生：要疯了""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229036964-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564282.md#1">美议员：媒体制造选举虚假叙事 误导民众</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564217.md#1">亚太峰会召开 川普习近平视频出席引关注</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563878.md#1">习再拒“脱钩” 专家：美中脱钩或致中共垮台</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563897.md#1">【珍言真语】谈舞弊遭禁播 桑普直指华盛顿沼泽</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564148.md#1">美加大对太平洋岛国援助 制衡中共影响力</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564235.md#1">【直播】白宫发言人新闻发布会</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564263.md#1">拒绝认证大选结果 密州官员自曝遭人肉搜索</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563838.md#1">【名家专栏】藏在健康气候议题下的权力欲望</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564282.md#1">美议员：媒体制造选举虚假叙事 误导民众</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564217.md#1">亚太峰会召开 川普习近平视频出席引关注</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563878.md#1">习再拒“脱钩” 专家：美中脱钩或致中共垮台</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -37,7 +37,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,902,657 人
+!共 367,902,709 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -111,8 +111,8 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
 <br><p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/22/n12495148.md#1">德与财的故事：曾国藩和林则徐的选择</a><br>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/5/n12527927.md#1">【敦煌寻梦】丝绸之路上的明珠</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12554038.md#1">【魏晋选举】之二：士族辉煌 耀亮门第</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/6/n12531008.md#1">【成吉思汗】占领中都 夺取金国半壁河山</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a><br>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556647.md#1">擅长针灸与诊脉 令朝野叹服的东汉名医郭玉</a><br>
 <br><p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
