--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -18,7 +18,6 @@
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12542100.md#1" target="_blank">菠菜增强免疫力、补血 营养师分享2道美味料理</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12545371.md#1" target="_blank">四大补汤哪个适合你？中医推1碗汤一般人都能喝</a><br></h3>
-<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12545631.md#1" target="_blank">2招防空污 远离肺癌、心脏病和中风</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1" target="_blank">凡士林不只保湿 有5大妙用 挑选看1点</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556324.md#1" target="_blank">坐姿前弯：简单一个动作 拉伸全身后侧肌肉</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556425.md#1" target="_blank">喉咙痛到吞口水想哭？按2个耳穴速止痛</a><br></h3>
@@ -27,5 +26,6 @@
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560254.md#1" target="_blank">【慧聊养生】最早疫苗源于中国</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561618.md#1" target="_blank">治牙周病他糖尿病竟好转 医：都是慢性发炎惹祸</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562184.md#1" target="_blank">新冠疫苗就要来了 医生：3种人接种有风险</a><br></h3>
+<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564183.md#1" target="_blank">5个动作 终结驼背软塌姿势 运动效果加倍</a><br></h3>
 <tr><td><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
